--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 <title>Luis Blasco — Industrial Design</title>
 
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 
 <style>
 
@@ -41,31 +40,7 @@ body{
   pointer-events:none;
   transform:translate(-50%,-50%);
   z-index:1000;
-  transition:
-    width .25s var(--ease),
-    height .25s var(--ease),
-    background .25s var(--ease);
 }
-
-.cursor.active{
-  width:56px;
-  height:56px;
-  background:rgba(255,255,255,.05);
-}
-
-.cursor span{
-  position:absolute;
-  inset:0;
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  font-size:9px;
-  letter-spacing:.3em;
-  opacity:0;
-  transition:.25s var(--ease);
-}
-
-.cursor.active span{ opacity:1; }
 
 /* ================= NAV ================= */
 nav{
@@ -99,20 +74,30 @@ nav span:hover{ color:#fff; }
 .section{
   min-height:100vh;
   display:flex;
-  align-items:center;
+  align-items:flex-start;
   padding:120px 10% 0;
 }
 
-/* desplazamiento general a la derecha */
 .content-left{
   max-width:900px;
   margin-left:10vw;
+  position:relative;
 }
 
 .content-center{
   max-width:900px;
   margin:0 auto;
   text-align:center;
+}
+
+/* ================= TITLES (KEY PART) ================= */
+.section h1{
+  position:sticky;
+  top:140px;              /* ⬅ MISMA ALTURA PARA TODOS */
+  font-size:clamp(70px,6vw,120px);
+  font-weight:500;
+  line-height:1.05;
+  z-index:2;
 }
 
 /* ================= HERO ================= */
@@ -127,13 +112,7 @@ nav span:hover{ color:#fff; }
   color:#777;
 }
 
-/* ================= TYPO ================= */
-h1{
-  font-size:clamp(70px,6vw,120px);
-  font-weight:500;
-  line-height:1.05;
-}
-
+/* ================= TEXT ================= */
 p{
   margin-top:18px;
   font-size:15px;
@@ -147,10 +126,7 @@ p{
 .about-content{
   display:flex;
   gap:32px;
-}
-
-.about-text{
-  max-width:480px;
+  margin-top:120px; /* espacio bajo el título sticky */
 }
 
 .about-photo{
@@ -165,7 +141,7 @@ p{
 
 /* ================= PORTFOLIO ================= */
 .portfolio-list{
-  margin-top:48px;
+  margin-top:120px;
   display:flex;
   flex-direction:column;
   gap:44px;
@@ -207,7 +183,7 @@ p{
 
 /* ================= CV ================= */
 .cv-block{
-  margin-top:42px;
+  margin-top:120px;
   max-width:700px;
 }
 
@@ -238,32 +214,17 @@ p{
   color:#777;
 }
 
-.cv-link{
-  margin-top:24px;
-}
-
-.cv-link a{
-  color:#aaa;
-  text-decoration:none;
-  border-bottom:1px solid #333;
-  padding-bottom:2px;
-}
-
 /* ================= CONTACT ================= */
 .section.contact .content-left{ margin-top:-165px; }
-.section.contact h1{ margin-top:62px; }
 
 .contact-list{
-  margin-top:22px;
+  margin-top:120px;
   display:flex;
   flex-direction:column;
   gap:14px;
 }
 
 .contact-list a{
-  display:flex;
-  align-items:center;
-  gap:14px;
   font-size:15px;
   color:#aaa;
   text-decoration:none;
@@ -293,16 +254,11 @@ footer{
   filter:none;
 }
 
-/* ================= REDUCED MOTION ================= */
-@media (prefers-reduced-motion:reduce){
-  *{ transition:none !important; }
-}
-
 </style>
 </head>
 <body>
 
-<div class="cursor"><span>VIEW</span></div>
+<div class="cursor"></div>
 
 <nav>
   <span data-i="0">Inicio</span>
@@ -325,24 +281,22 @@ footer{
   <div class="content-left">
     <h1 class="reveal">Sobre mí</h1>
 
-    <div class="about-content">
-      <div class="about-text reveal">
-        <p>
-          Ingeniero en diseño industrial de 24 años, con base en Valencia. No me considero una persona
-          enfocada en un campo fijo, sino alguien con un perfil ecléctico, flexible y capaz de adaptarse
-          a distintos entornos y contextos de trabajo. No me sitúo ni en un extremo puramente artístico
-          ni estrictamente técnico, sino en un punto intermedio que me permite comprender y conectar
-          ambas dimensiones del diseño.
-          <br><br>
-          He cursado mis estudios en la Universidad Politécnica de Valencia, tras iniciar mi formación
-          en la Universitat Jaume I de Castellón, y completarlos con un programa Erasmus en la Middlesex
-          University de Londres. Cuento además con una formación profesional en electricidad, que me ha
-          aportado una base técnica sólida y una forma de pensar práctica. Disfruto del proceso de diseño
-          desde lo conceptual hasta la producción final, con soluciones consistentes.
-        </p>
-      </div>
+    <div class="about-content reveal">
+      <p>
+        Ingeniero en diseño industrial de 24 años, con base en Valencia. No me considero una persona
+        enfocada en un campo fijo, sino alguien con un perfil ecléctico y flexible, capaz de adaptarse
+        a distintos entornos y contextos de trabajo. No me sitúo ni en un extremo puramente artístico
+        ni estrictamente técnico, sino en un punto intermedio que me permite comprender y conectar
+        ambas dimensiones del diseño.
+        <br><br>
+        He cursado mis estudios en la Universidad Politécnica de Valencia, tras iniciar mi formación
+        en la Universitat Jaume I de Castellón, y completarlos con un programa Erasmus en la Middlesex
+        University de Londres. Cuento además con una formación profesional en electricidad, que me ha
+        aportado una base técnica sólida y una forma de pensar práctica. Disfruto del proceso de diseño
+        desde lo conceptual hasta la producción final, con soluciones consistentes.
+      </p>
 
-      <div class="about-photo reveal">
+      <div class="about-photo">
         <img src="foto.jpg" alt="Foto personal">
       </div>
     </div>
@@ -354,20 +308,20 @@ footer{
   <div class="content-left">
     <h1 class="reveal">Portfolio</h1>
 
-    <div class="portfolio-list">
-      <a href="node.html" class="project hero reveal">
+    <div class="portfolio-list reveal">
+      <a href="node.html" class="project hero">
         <span>Proyecto principal</span>
         <h3>NODE — Sistema modular</h3>
         <p>Estructura, repetición y fabricación racional.</p>
       </a>
 
-      <a href="sixay.html" class="project reveal">
+      <a href="sixay.html" class="project">
         <span>Mobiliario · A medida</span>
         <h3>Sixay — Cómoda personalizada</h3>
         <p>Diseño y producción para cliente real.</p>
       </a>
 
-      <a href="impresion3d.html" class="project reveal">
+      <a href="impresion3d.html" class="project">
         <span>Investigación</span>
         <h3>Impresión 3D aplicada</h3>
         <p>Fabricación aditiva en producto industrial.</p>
@@ -393,10 +347,6 @@ footer{
         <h3>Experiencia</h3>
         <div class="cv-item"><strong>Sixay</strong><span>Diseño de mobiliario</span></div>
       </div>
-
-      <div class="cv-link">
-        <a href="Luis_Blasco_CV.pdf" download>Descargar CV (PDF)</a>
-      </div>
     </div>
   </div>
 </section>
@@ -419,10 +369,8 @@ footer{
 </footer>
 
 <script>
-/* FADE IN */
 window.addEventListener("load",()=>{ document.body.style.opacity="1"; });
 
-/* CURSOR */
 const cursor=document.querySelector(".cursor");
 let mx=0,my=0,x=0,y=0;
 addEventListener("mousemove",e=>{ mx=e.clientX; my=e.clientY; });
@@ -433,17 +381,15 @@ addEventListener("mousemove",e=>{ mx=e.clientX; my=e.clientY; });
   requestAnimationFrame(loop);
 })();
 
-/* REVEAL */
 const obs=new IntersectionObserver(entries=>{
   entries.forEach(e=>{ if(e.isIntersecting) e.target.classList.add("visible"); });
 },{threshold:.15});
 document.querySelectorAll(".reveal").forEach(el=>obs.observe(el));
 
-/* NAV */
 document.querySelectorAll("nav span").forEach((b,i)=>{
   b.addEventListener("click",()=>{
     if(i===4){
-      window.scrollTo({ top:document.body.scrollHeight, behavior:"smooth" });
+      window.scrollTo({top:document.body.scrollHeight,behavior:"smooth"});
     }else{
       document.querySelectorAll(".section")[i]
         .scrollIntoView({behavior:"smooth",block:"start"});
