--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ nav span{
   );
 }
 
-/* ========== SECTION BLOCK (KEY) ========== */
+/* ========== SECTION BLOCK ========== */
 .section-block{
   position:sticky;
   top:140px;
@@ -171,14 +171,14 @@ p{
   font-weight:500;
 }
 
-/* ========== FOOTER ========== */
-footer{
-  text-align:center;
-  padding:100px 0 140px;
+/* ========== FOOTER (NOW INSIDE CONTACT) ========== */
+.footer{
+  margin-top:64px;
+  padding-top:24px;
+  border-top:1px solid #1c1c1c;
   font-size:11px;
   letter-spacing:.18em;
   color:#cfcfcf;
-  border-top:1px solid #1c1c1c;
 }
 
 /* ========== REDUCED MOTION ========== */
@@ -261,17 +261,17 @@ footer{
   </div>
 </section>
 
-<!-- CONTACTO -->
+<!-- CONTACTO + FOOTER -->
 <section class="section">
   <div class="section-block">
     <h1>Contacto</h1>
     <p>Email · Teléfono · LinkedIn</p>
+
+    <div class="footer">
+      © 2026 · Luis Blasco — Industrial Design
+    </div>
   </div>
 </section>
-
-<footer>
-© 2026 · Luis Blasco — Industrial Design
-</footer>
 
 <script>
 /* CURSOR */
